@@ -45,6 +45,7 @@ paths. The BCI warmup is on by default and may be disabled through the internal 
 ** Dubbo transaction will should be created at the provider side
 ** APM headers conversion issue within dubbo transaction
 * Fix External plugins automatic setting of span outcome - {pull}2376[#2376]
+* Avoid early initialization of JMX on Weblogic - {pull}2420[#2420]
 
 [[release-notes-1.x]]
 === Java Agent version 1.x
